# saniraq.kz

./: Dockerfile  README.md  pyproject.toml  railway.json  sql_app.db
alembic/: env.py
alembic/versions/: 0d4f8619c270_add_to_comments_table_column_with_ads_id.py  4895101e7d57_add_columns_created_at_edited_in_.py  e7a7b8489018_first.py  feaa217ccaeb_add_to_comments_table_column_with_ads_id.py
app/: ads_repository.py  main.py  users_repository.py
app/utils/: ads_repository.py  comments_repository.py  schemas.py  users_repository.py
scripts/: launch.sh
